--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yadada-frontend",
+  "name": "yudada-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,22 +9,20 @@
     "openapi": "node openapi.config.ts"
   },
   "dependencies": {
-    "@arco-design/web-react": "^2.65.0",
-    "@bytemd/plugin-gfm": "^1.22.0",
-    "@bytemd/plugin-highlight": "^1.22.0",
-    "@bytemd/vue-next": "^1.22.0",
-    "axios": "^1.8.1",
+    "@bytemd/plugin-gfm": "^1.21.0",
+    "@bytemd/plugin-highlight": "^1.21.0",
+    "@bytemd/vue-next": "^1.21.0",
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
-    "pinia": "^3.0.1",
+    "pinia": "^2.1.7",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
-    "webpack": "^5.98.0"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
-    "@arco-design/web-vue": "^2.56.3",
+    "@arco-design/web-vue": "^2.55.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "@umijs/openapi": "^1.13.0",
+    "@umijs/openapi": "^1.12.1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
